tests/checker/ok/literal_dispatch.can
Path = String

Classified = (Int) => String {
    Int -> (
        * 0 => String { "zero" }
        * 1 => String { "one" }
        * Int => String { "many" }
    )
}

Routed = (Path) => String {
    Path -> (
        * "/" => String { "home" }
        * "/notes" => String { "index" }
        * Path => String { "not found" }
    )
}

Unit => Program {
    "/notes"
        -> Path
        -> Routed
        -> Print
    2
        -> Classified
        -> Print
}
