tests/checker/fail/product_construction_incompatible_type.can
Birthday = Int

User = Birthday * Username

Username = String

Unit => Program {
    1
        -> User(2)
        -> Username
        -> Print
}
